# serdebug

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
derive/: Cargo.toml
derive/src/: lib.rs
lib/: Cargo.toml  README.md  build.rs
lib/src/: debug.rs  error.rs  lib.rs  map.rs  seq.rs  structure.rs  tuple.rs
lib/tests/: test.rs
serdebug/: Cargo.toml
serdebug-derive/: Cargo.toml
serdebug-derive/src/: lib.rs
serdebug-derive/tests/: test.rs
serdebug/src/: lib.rs  map.rs  tuple.rs  wrapper.rs
src/: debug.rs  error.rs  lib.rs  map.rs  seq.rs  structure.rs  tuple.rs
tests/: test.rs
