[workspace.package]
version = "1.2.0"
edition = "2021"
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
license = "MIT"
repository = "https://github.com/RReverser/serdebug"
categories = ["development-tools::debugging", "value-formatting", "no-std"]
keywords = ["serialization", "serde", "debug", "formatting", "derive"]

[workspace.dependencies]
serde = { version = "1.0", default-features = false, features = ["alloc"] }

[workspace]
members = ["derive"]

[package]
name = "serdebug"
description = "serde-based replacement for #[derive(Debug)]"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
ref-cast = "1.0.23"
serde.workspace = true
serdebug_derive = { path = "derive", version = "1.2.0" }

[features]

[dev-dependencies]
serde = { workspace = true, features = ["derive", "std"] }
proptest = "1.5.0"
test-strategy = "0.4.0"
