[package]
name = "serdebug_derive"
description = "Proc-macro part for serdebug (see main crate for more details)"
version = "1.0.0"
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
license = "MIT"
repository = "https://github.com/RReverser/serdebug"

[dependencies]
quote = "0.6.4"
syn = "0.14.5"

[lib]
proc-macro = true
