[package]
name = "serdebug_derive"
description = "Proc-macro part for serdebug (see main crate for more details)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
quote = "1.0.37"
syn = "2.0.79"

[lib]
proc-macro = true
