[package]
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
name = "serdebug"
version = "0.1.0"
readme = "../README.md"

[features]
nightly = []

[build-dependencies]
rustc_version = "0.2.2"

[dependencies]
serde = "1.0.70"
serdebug_derive = { path = "../derive" }

[dev-dependencies]
serde_derive = "1.0.70"
