[package]
name = "serdebug"
description = "Serde-based replacement for #[derive(Debug)]"
version = "1.0.3"
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
license = "MIT"
repository = "https://github.com/RReverser/serdebug"
readme = "../README.md"
categories = ["development-tools::debugging", "value-formatting"]

[build-dependencies]
rustc_version = "0.2.2"

[dependencies]
serde = "1.0.70"
serdebug_derive = { version = "1.0.0", path = "../derive" }

[dev-dependencies]
serde_derive = "1.0.70"

[badges]
travis-ci = { repository = "RReverser/serdebug", branch = "master" }
